# sklsExcelTool

./: .gitignore  pyproject.toml
sklsExcelTool/: Writer.py  __init__.py  excelcol.py
sklsExcelTool/Writer/: Writer.py  __init__.py
sklsExcelTool/matcher_util/: __init__.py  e.py  synonmsMatcher.py  synonyms.py  synonymsMatcher.py
sklsExcelTool/readtool/: __init__.py  readtool.py
