[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-package"  # 包名，小写，用连字符
version = "0.1.0"
authors = [
  { name="白桃乌龙茶", email="chat.q@outlook.com" },
]
description = "A short description of my package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shengqiqqq/sklsExcelTool"
